# bid-management-agentic

./: README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  health_check.py
app/api/v1/procurement/: __init__.py  bid.py  query.py  tender.py
app/core/: logger.py  settings.py
app/db/models/: Bid.py  File.py  Query.py  Review.py  Rule.py  Tender.py  __init__.py
app/db/stores/: __init__.py  mongo.py
app/db/utils/: events.py  filters.py  pagination.py
