[project]
name = "entity-agent-interaction"
version = "0.1.0"
description = "Agentic System Backend for Business Domains"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.30.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.69",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "pymupdf4llm>=0.0.26",
    "pytesseract>=0.3.13",
]
